--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <link href="./hent-icon.png" rel="apple-touch-icon" />
   </head>
-  <body class="body">
-    <div class="w-container">
+  <body>
+    <div class="container">
       <div class="section-2">
         <h1 class="heading-2"><span class="text-span">Hent</span></h1>
       </div>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="section-3">
-        <a href="mailto:alugecom@hent.com.br" class="button btn w-button"><span>Fale com a gente</span></a>
+        <a href="mailto:alugecom@hent.com.br" class="button btn"><span>Fale com a gente</span></a>
       </div>
     </div>
   </body>
